code cleanup & minor spacing fixes

--- a/packages/app/client/src/ui/editor/welcomePage/welcomePage.scss
+++ b/packages/app/client/src/ui/editor/welcomePage/welcomePage.scss
@@ -268,3 +268,7 @@
 .spacing {
   padding: 0 0 2px 2px;
 }
+
+.margin-fix {
+  margin-left: 0;
+}
